apps/foo/manifests/app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: foo
  namespace: default
  labels:
    app: foo
spec:
  selector:
    app: foo
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace: default
  labels:
    app: foo
spec:
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      serviceAccountName: foo
      containers:
        - name: foo
          image: foo:latest
          ports:
            - containerPort: 8080
