apps/foo/manifests/l5d-routes-in.yaml
# HTTP Inbound routes
# https://linkerd.io/2-edge/features/httproute/#inbound-and-outbound-httproutes
---
apiVersion: policy.linkerd.io/v1beta2
kind: HTTPRoute
metadata:
  name: foo-root-inbound
  namespace: default
spec:
  parentRefs:
    - name: foo
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
